--- a/ds1t-b/Projeto FF/criadores.css
+++ b/ds1t-b/Projeto FF/criadores.css
@@ -78,8 +78,35 @@
     display: flex;
     align-items: center;
     color: #FFFFFF;
-<<<<<<< HEAD
-=======
+}
 
->>>>>>> 33d9fd9ab29376e536ead14280671c80ad1c5587
+/* MOBILE */
+@media(max-width:640px) {
+
+    .container-criadores {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 2000px;
+    }
+
+    .titulo-criadores {
+        height: 50px;
+    }
+
+    .primeira-div{
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .segunda-div{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .quadrado-criadores{
+        gap: 30px;
+    }
 }
