--- a/ds1t-b/Projeto FF/producao.css
+++ b/ds1t-b/Projeto FF/producao.css
@@ -33,7 +33,27 @@
     width: 100%;
 }
 
-.bloco-producao {
+.bloco-intro {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    width: 1800px;
+    gap: 80px;
+}
+
+.bloco-desen {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    width: 1800px;
+    gap: 80px;
+}
+
+.bloco-conclu {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -66,8 +86,6 @@
     width: 100%;
 }
 
-
-
 .conclu {
     display: flex;
     flex-direction: row;
@@ -80,4 +98,94 @@
 
 .imagem-producao {
     height: 100%;
+}
+
+/* MOBILE */
+@media(max-width:640px) {
+
+    .titulo-producao{
+        padding-top: 40px;
+    }
+
+    .texto-producao{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        padding-left: 15px;
+        width: 100%;
+        height: 370px;
+        font-family: 'Yaldevi Colombo Medium';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 32px;
+        align-items: center;
+        color: #FFFFFF;
+    }
+
+    .imagem-producao{
+        box-sizing: border-box;
+        width: 100%;
+        height: 200px;
+    }
+
+    .intro{
+        display: flex;
+        flex-direction: column;
+        padding-top: 0px;
+        width: 95%;
+        height: 559px;
+        align-items: center;
+        padding-left: 15px;
+        padding-top: 19px;
+    }
+
+    .conclu{
+        display: flex;
+        flex-direction: column;
+        padding-top: 0px;
+        width: 95%;
+        height: 559px;
+        align-items: center;
+        padding-left: 15px;
+    }
+
+    .desen{
+        display: flex;
+        flex-direction: column;
+        padding-top: 0px;
+        width: 95%;
+        height: 559px;
+        align-items: center;
+        padding-left: 15px;
+    }
+    
+    .bloco-intro{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 700px;
+        align-items: center;
+        
+        gap: 20px;
+    }
+
+    .bloco-desen{
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+        height: 700px;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .bloco-conclu {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 700px;
+        align-items: center;
+        gap: 20px;
+    }
 }
