--- a/ds1t-b/Projeto FF/style.css
+++ b/ds1t-b/Projeto FF/style.css
@@ -2,8 +2,7 @@ section{
     height: 100vh;
     border-top: 5px solid #023158;
 }
-body{
-}
+
 main{
     grid-area: content;
     align-items: center;
@@ -63,21 +62,37 @@ footer{
     }
     
     .personagens{
+        width: 100%;
+        height: 800px;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.03), rgba(255, 255, 255, 0.03)), rgba(12, 20, 27, 0.87);
+        background-size: cover;
     }
 
     .producao{
-        display: none;
+        width: 100%;
+        height: 1700px ;
+        grid-template-rows: 50px 650px 500px 500px;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.03), rgba(255, 255, 255, 0.03)), rgba(12, 20, 27, 0.87);
+        background-size: cover;
     }
 
     .criadores{
-        display: none;
+        width: 100%;
+        height: 2150px ;
+        grid-template-rows: 50px auto;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.03), rgba(255, 255, 255, 0.03)), rgba(12, 20, 27, 0.87);
+        background-size: cover;
     }
 
     .contatos{
-        display: none;
+        width: 100%;
+        height: 1000px;
+        grid-template-rows: 125px auto;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.03), rgba(255, 255, 255, 0.03)), rgba(12, 20, 27, 0.87);
+        background-size: cover;
     }
 
-    footer{
+    .footer{
         display: none;
     }
 
