--- a/ds1t-b/yasmin/css/home.css
+++ b/ds1t-b/yasmin/css/home.css
@@ -10,7 +10,7 @@
 .home__title{    
     max-width: 900px;
     width: 100%;
-    font-size: 4em;
+    font-size: 3.5vw;
     text-align: center;
     display: flex;
     align-items: center;
