--- a/ds1t-b/yasmin/css/contato.css
+++ b/ds1t-b/yasmin/css/contato.css
@@ -3,7 +3,7 @@
     justify-content: center;
 }
 .contato__title{
-    font-size: 4rem;
+    font-size: 3.5vw;
     justify-self: center;
 }
 .sociais{
@@ -26,7 +26,7 @@
     justify-content: center;
 }
 .contato-item{
-    font-size: 2rem;
+    font-size: 1.5vw;
     text-align: center;
 }
 .social-item:hover{
