--- a/ds1t-a/Luiz Gustavo/css/mac.css
+++ b/ds1t-a/Luiz Gustavo/css/mac.css
@@ -7,15 +7,52 @@
     grid-template-columns: 50% 50%;
     height: 75vh;
 }
+.main-right-mac {
+    grid-column: 2;
+    display: grid;
+    place-items: center;
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    gap: 50px;
+}
+
+.main-left-mac {
+    grid-column: 1;
+    display: grid;
+    place-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: justify;
+    gap: 20px;
+}
+
+.mac-pro{
+    width: 35vw;
+    height: 41vh;
+}
+
+.macs{
+    width: 31vw;
+    height: 40vh;
+}
 
 @media (max-width: 960px) {
     .section-mac {
-        height: 125vh;
+        height: 160vh;
     }
     .main-mac {
         display: flex;
         flex-direction: column;
         gap: 10px;
+    }
+    .main-right-mac {
+        gap: 20px;
+        grid-area: right;
+    }
+    .main-left-mac {
+        grid-area: left;
     }
     .macs {
         width: 580px;
@@ -29,7 +66,13 @@
 
 @media (max-width: 640px) {
     .section-mac {
-        height: 95vh;
+        height: 125vh;
+    }
+    .main-right-mac{
+        height: 60vh;
+    }
+    .main-left-mac{
+        height: 60vh;
     }
     .macs {
         width: 80vw;
@@ -38,5 +81,11 @@
     .mac-pro {
         width: 80vw;
         height: auto;
+    }
+}
+
+@media (max-width: 320px){
+    .section-mac{
+        height: 100vh;
     }
 }
