--- a/ds1t-a/Luiz Gustavo/css/style.css
+++ b/ds1t-a/Luiz Gustavo/css/style.css
@@ -18,27 +18,6 @@ body {
     height: 100vh;
 }
 
-.main-right {
-    grid-column: 2;
-    display: grid;
-    place-items: center;
-    display: flex;
-    flex-direction: column;
-    text-align: justify;
-    gap: 50px;
-}
-
-.main-left {
-    grid-column: 1;
-    display: grid;
-    place-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: justify;
-    gap: 20px;
-}
-
 footer {
     height: 10vh;
     background-color: #222020;
@@ -50,18 +29,17 @@ footer {
     font-weight: 400;
 }
 
-@media (max-width: 960px) {
-    .main-right {
-        gap: 20px;
-        grid-area: right;
-    }
-    .main-left {
-        grid-area: left;
-    }
-}
-
 @media (max-width: 640px) {
     footer {
         font-size: 1rem;
+    }
+}
+
+@media (max-width: 320px){
+    header{
+        height: 10vh;
+    }
+    footer{
+        font-size: 0.75rem;
     }
 }
