--- a/ds1t-a/Luiz Gustavo/css/watch.css
+++ b/ds1t-a/Luiz Gustavo/css/watch.css
@@ -36,7 +36,7 @@
         height: 15vh;
     }
     .main-watch {
-        height: 70vh;
+        height: 80vh;
     }
     .watch {
         width: 523px;
@@ -51,6 +51,9 @@
     }
     .text-watch {
         font-size: 0.875rem;
+        width: 80vw;
+    }
+    .watch{
         width: 80vw;
     }
 }
