--- a/ds1t-a/Alexssandro/css/cafes-variados.css
+++ b/ds1t-a/Alexssandro/css/cafes-variados.css
@@ -22,11 +22,19 @@
     color: var(--cor-primaria);
 }
 
-.slider {
+.slider-cv {
     margin: 0 auto;
-    width: 1170px;
-    height: 552px;
+    width: 1440px;
+    height: 848px;
     overflow: hidden;
+}
+
+.slides-cv {
+    display: flex;
+    width: 600%;
+    height: 848px;
+    transition: transform 0.5s ease-in-out;
+    transform: translateX(0);
 }
 
 .slide {
@@ -36,7 +44,7 @@
     width: 1170px;
     height: 552px;
     gap: 30px;
-    margin: 148px 0px;
+    margin: 148px 120px;
 }
 
 .descricao-cv {
@@ -45,6 +53,7 @@
     justify-content: center;
     align-items: center;
     gap: 48px;
+    width: 570px;
 }
 
 .texto-cv {
