Falta somente menu JS

--- a/ds1t-a/Luiz Gustavo/css/airpods.css
+++ b/ds1t-a/Luiz Gustavo/css/airpods.css
@@ -107,7 +107,10 @@
     }
 }
 
-@media (max-width: 320px){
+@media (max-width: 375px){
+    .section-airpods-watch{
+        height: 160vh;
+    }
     .img-airpods-pro{
         width: 80vw;
     }
