--- a/ds1t-a/one-page-doceria/css/menu-cardapio.css
+++ b/ds1t-a/one-page-doceria/css/menu-cardapio.css
@@ -1,6 +1,13 @@
-.menu-cardapio{
-    
+.menu_cardapio{
     background-color: #E5E5E5;
+    height: 250vh;
+}
+.cardapio_box{
+    display: flex;
+    gap: 222px;
+    margin-top: 111px;
+    flex-wrap: wrap;
+    place-content: center;
 }
 .titulo{
     width: 245px;
@@ -16,8 +23,8 @@
     margin-top: 52px;
     border-radius: 10px;
 }
-.item-cardapio-frango{
-    margin-left: 88px;
+.item_cardapio_frango{
+    
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -28,13 +35,13 @@
     border-radius: 10px;
     background: linear-gradient(230.64deg, rgba(112, 255, 0, 0.56) 4.08%, rgba(255, 0, 0, 0.76) 102.84%);;
 }
-.titulo-frango{
+.titulo_itens{
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 36px;
 }
-.preco-add{
+.preco_add{
     display: flex;
     gap: 91px;
     margin-top: 17px;
@@ -63,4 +70,72 @@
     place-content: center;
     font-family: 'Inter';
     font-size: 21px;
+}
+
+.item_cardapio_rabanada{
+    
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    place-content: center;
+    place-items: center;
+    width: 500px;
+    height: 450px;
+    border-radius: 10px;
+    background: linear-gradient(230.64deg, rgba(112, 255, 0, 0.56) 4.08%, rgba(255, 0, 0, 0.76) 102.84%);;
+}
+
+.item_cardapio_pave{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    place-content: center;
+    place-items: center;
+    width: 500px;
+    height: 450px;
+    border-radius: 10px;
+    background: linear-gradient(230.64deg, rgba(112, 255, 0, 0.56) 4.08%, rgba(255, 0, 0, 0.76) 102.84%);;
+    
+}
+
+.item_cardapio_salpicao{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    place-content: center;
+    place-items: center;
+    width: 500px;
+    height: 450px;
+    border-radius: 10px;
+    background: linear-gradient(230.64deg, rgba(112, 255, 0, 0.56) 4.08%, rgba(255, 0, 0, 0.76) 102.84%);;
+}
+
+.item_cardapio_arroz{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    place-content: center;
+    place-items: center;
+    width: 500px;
+    height: 450px;
+    border-radius: 10px;
+    background: linear-gradient(230.64deg, rgba(112, 255, 0, 0.56) 4.08%, rgba(255, 0, 0, 0.76) 102.84%);;
+    
+}
+
+
+.item_cardapio_maionese{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    place-content: center;
+    place-items: center;
+    width: 500px;
+    height: 450px;
+    border-radius: 10px;
+    background: linear-gradient(230.64deg, rgba(112, 255, 0, 0.56) 4.08%, rgba(255, 0, 0, 0.76) 102.84%);;
+    
+}
+.circulo{
+   
 }
