--- a/ds1t-b/yasmin/css/style.css
+++ b/ds1t-b/yasmin/css/style.css
@@ -40,3 +40,9 @@ footer{
     justify-content: center;
     align-items: center;
 }
+@media (max-width:960px) {
+    header{
+        max-width: 750px;
+        width: 100%;
+    }
+}
