--- a/ds1m-b/lucasvinicius/css/textImg.css
+++ b/ds1m-b/lucasvinicius/css/textImg.css
@@ -7,7 +7,7 @@
 
 .textImg span{
     width: 700px;
-    height: 280px;
+    height: 265px;
     text-align: right;
     font-size: 1.5rem;
     display: flex;  
@@ -20,26 +20,7 @@
     height: 900px;
 }
 
-#linha-horizontal2 {
-    height: 300px;
-    border: 3px solid #ffffff;
-}
 
-#linha-horizontal22 {
-    height: 325px;
-    border: 3px solid #ffffff;
-}
-
-.quadrado {
-    background-color: gray;
-    width: 105px;
-    height: 25px;
-    color: black;
-    display: none;
-}
-
-
-.textImg span:hover ~ .quadrado {
+.quadrado1 span:hover ~ .quadrado {
     display: flex;
 }
-
